package sae.transport.comparison.exceptions;

public class AucunCheminException extends Exception {
    public AucunCheminException(String message) {
        super(message);
    }
}
