package sae.transport.comparison.exceptions;

// TODO : Ajouter la JavaDoc manquante avant de tag POO-v2

public class DonneesInvalidesException extends Exception {
    public DonneesInvalidesException(String message) {
        super(message);
    }
}
